--- a/server/config/config.env
+++ b/server/config/config.env
@@ -1,3 +1,5 @@
 MONGODB_URL = mongodb+srv://ngond92:JALIjtBAOIFa2JfW@lecturescheduler.duwkyoz.mongodb.net/lecturescheduler?retryWrites=true&w=majority
 
 JWT_SECRET = mynameisneetugondmakingassignmentforideamagix
+
+BASE_URL = http://localhost:5000
